@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="3.4.2" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="3.5.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
-        <import addon="script.module.tulip" version="2.8.1" />
+        <import addon="script.module.tulip" version="2.8.16" />
+        <import addon="script.module.futures" version="0.0.0.2" />
     </requires>
     <extension point="xbmc.subtitle.module" library="service.py">
     </extension>
@@ -18,7 +19,14 @@
         <website>http://www.subtitles.gr/</website>
         <source>https://github.com/Twilight0/service.subtitles.subtitles.gr/</source>
         <platform>all</platform>
-        <news>[B]3.4.0 - 3.4.1[/B]
+        <news>[B]3.5.0[/B]
+- Change caching method
+- Kodi 19+ related fixes
+- Remove prompt for libarchive installation
+- Increased cache durations for the given functions
+- Improve performance with futures instead of arbitrary ranges on workers
+
+[B]3.4.0 - 3.4.1[/B]
 - Code related tweaks, particularly how routing is handled
 - Added ability to save locally subtitles and/or zips from sources
 
